# TicketBackend

./: .env  .env.example  .gitignore  Cargo.toml  README  env.example
docs/: STORAGE_DESIGN.md
migrations/: 0001_init.sql  0002_fix_shows_numeric.sql
src/: bindings.rs  config.rs  lib.rs  logging.rs  main.rs  ticket_manager.rs
src/abis/: EventManager.json  Marketplace.json  PlatformToken.json  ShowManager.json  TicketManager.json
src/api/: error.rs  mod.rs  request.rs  response.rs  schema.rs  show_manager.rs
src/contract/: bindings.rs  mod.rs  providers.rs
src/contract/abis/: DIDRegistry.json  EventManager.json  TokenSwap.json
src/contract/contracts/: mod.rs  show_manager.rs  ticket_manager.rs
src/contract/event/: router.rs
src/db/: mod.rs  redis_cache.rs
src/event/: mod.rs  router.rs  show_manager.rs
src/example/: demo.rs
src/repo/: mod.rs  show_repo.rs
src/tools/: mod.rs
src/utils/: uint256.rs
tests/: api_validation_tests.rs  repo_show_tests.rs  request_id_tests.rs
