[package]
name = "backend"
version = "0.1.0"
edition = "2024"
default-run = "backend"

[dependencies]
alloy = { version = "1.0.24", features = ["full"] }
axum = { version = "0.8.4", features = ["http2", "query", "tracing", "multipart", "macros"] }
dotenv = "0.15.0"
eyre = "0.6.12"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio-rustls", "bigdecimal", "migrate"] }
bigdecimal = { version = "0.4", features = ["serde"] }
tokio = { version = "1.47.1", features = ["full"] }
futures = "0.3"
futures-util = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
chrono = { version = "0.4.42", features = ["serde"] }
redis = { version = "0.32.5", features = ["tokio-comp"] }
num-bigint = { version = "0.4.6", features = ["serde"] }
clap = { version = "4.5.15", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
tracing-opentelemetry = { version = "0.23", optional = true }
opentelemetry = { version = "0.23", optional = true }
opentelemetry_sdk = { version = "0.23", features=["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.16", features = ["grpc-tonic", "http-proto"], optional = true }
tower-http = { version = "0.5", features = ["trace", "request-id", "cors"] }
bytes = "1"
async-trait = "0.1"
thiserror = "1"

[features]
default = []
otel = [
	"tracing-opentelemetry",
	"opentelemetry",
	"opentelemetry_sdk",
	"opentelemetry-otlp",
]

[dev-dependencies]
tower = { version = "0.5" }
http = "0.2"
